gwt/client/Value.java - reorder conversion functions
And use always valueOf() to improve readability.

Former-commit-id: 82bdbf9c9fc1272beae3e808b77244de4f1555f0