@@ -118,13 +118,6 @@ public class Value implements Serializable, IsSerializable
 	{
 		return children.get( id ) != null;
 	}
-	
-	public int intValue()
-	{
-		if ( valueObject == null )
-			return 0;
-		return Integer.valueOf( valueObject );
-	}
 
 	public void deepCopy( Value otherValue )
 	{
@@ -142,14 +135,7 @@ public class Value implements Serializable, IsSerializable
 			children.put( entry.getKey(), myVector );
 		}
 	}
-	
-	public double doubleValue()
-	{
-		if ( valueObject == null )
-			return 0;
-		return new Double( valueObject );
-	}
-	
+
 	public String strValue()
 	{
 		if ( valueObject == null )
@@ -157,12 +143,26 @@ public class Value implements Serializable, IsSerializable
 		return valueObject.toString();
 	}
 
+	public int intValue()
+	{
+		if ( valueObject == null )
+			return 0;
+		return Integer.valueOf( valueObject );
+	}
+
+	public double doubleValue()
+	{
+		if ( valueObject == null )
+			return 0.0;
+		return Double.valueOf( valueObject );
+	}
+
 	// Added by Balint Maschio
 	public long longValue()
 	{
 		if ( valueObject == null )
-			return 0;
-		return new Long( valueObject );
+			return 0L;
+		return Long.valueOf( valueObject );
 	}
 
 	public boolean boolValue()
@@ -171,7 +171,7 @@ public class Value implements Serializable, IsSerializable
 			return false;
 		return Boolean.valueOf( valueObject );
 	}
-        
+
         public ByteArray byteArrayValue() {
                 
                 ByteArray r = null;
